refined lunch section

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </div>
         </div>
         <div id="question-time" class="hide">
-            <div id="question-time-subtext" class="hide">Nah fam, you're gonna be redirected to us</div>
+            <div id="question-time-subtext" class="hide">Nah fam, you're gonna be redirected to yes</div>
             <div class="question">When do you want to meet?</div>
             <div id="answer-buttons-2" class="btn-grid">
                 <button class="btn">Weekday</button>
@@ -28,20 +28,39 @@
             </div>
         </div>
         <div id="question-dinner" class="hide">
-            <div id = "question3" class="question">Let's Grab Dinner</div> 
+            <div class="question">Let's Grab Dinner</div> 
             <div id="answer-buttons-3" class="btn-grid">
                 <button class="btn">Sure</button>
                 <button class="btn">Nah!</button>
             </div>
         </div>
+        <div id="question-lunch" class="hide">
+            <div class="question">Lunch only or Hangout?</div> 
+            <div id="answer-buttons-4" class="btn-grid">
+                <button class="btn">Lunch</button>
+                <button class="btn">Lunch + Hangout</button>
+            </div>
+        </div>
         <div id="invitation-container" class="hide">
             <div>Here's the location we will have dinner:</div>
             <div>[Insert Location]</div>
-            <div>Call or text me to iron out the details</div>
+            <div>Call or text Rachel to iron out the details</div>
             <div>Firefly</div>
         </div>
         <div id="no-decision-container" class="hide">
             <div>What do you want?</div>
+        </div>
+        <div id="invitation-container-lunch" class="hide">
+            <div>Here's the location we will have lunch:</div>
+            <div>[Insert Location for lunch]</div>
+            <div>Call or text Rachel for details</div>
+            <div>Firefly</div>
+        </div>
+        <div id="invitation-container-lunch-hangout" class="hide">
+            <div>Here's where we'll hang and lunch :</div>
+            <div>[Insert Location for hang and lunch]</div>
+            <div>Call or text Rachel for details</div>
+            <div>Firefly</div>
         </div>
     </div>
 </body>
