--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
         </div>
         <div id="invitation-container" class="hide">
             <div>Here's the location we will have dinner:</div>
-            <div>[Insert Location]</div>
-            <div>Call or text Rachel to iron out the details</div>
+            <div>Kokoro Tokyo Mazesoba - Brentwood : 106-1901 Rosser Ave, Burnaby, BC v5C 6R6</div>
+            <div>Call or text me to iron out the details</div>
             <div>Firefly</div>
         </div>
         <div id="no-decision-container" class="hide">
@@ -52,13 +52,13 @@
         </div>
         <div id="invitation-container-lunch" class="hide">
             <div>Here's the location we will have lunch:</div>
-            <div>[Insert Location for lunch]</div>
+            <div>Anywhere, no Japanese Curry please. Though I'd prefer somewhere not downtown and KBBQ</div>
             <div>Call or text Rachel for details</div>
             <div>Firefly</div>
         </div>
         <div id="invitation-container-lunch-hangout" class="hide">
             <div>Here's where we'll hang and lunch :</div>
-            <div>[Insert Location for hang and lunch]</div>
+            <div>MeeT on Main : 4288 Main St, Vancouver, BC V5V 3P9</div>
             <div>Call or text Rachel for details</div>
             <div>Firefly</div>
         </div>
