--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
         <div id="invitation-container-lunch" class="hide">
             <div>Here's the location we will have lunch:</div>
             <div>Anywhere, no Japanese Curry please. Though I'd prefer somewhere not downtown and KBBQ</div>
-            <div>Call or text Rachel for details</div>
+            <div>Call or text me/Rachel for details</div>
             <div>Firefly</div>
         </div>
         <div id="invitation-container-lunch-hangout" class="hide">
             <div>Here's where we'll hang and lunch :</div>
             <div>MeeT on Main : 4288 Main St, Vancouver, BC V5V 3P9</div>
-            <div>Call or text Rachel for details</div>
+            <div>Call or text me/Rachel for details</div>
             <div>Firefly</div>
         </div>
     </div>
