--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <div id="welcome-container">
-            <div>Hi Name</div>
+            <div>Hi Peter</div>
             <div>It's been way to long since we've met up. That was intentional.</div>
             <div class="question">So let's meet up?</div> 
             <div id="answer-buttons-1" class="btn-grid">
